# safe-keep

./: .env.development  .env.production  .eslintcache  .gitignore  .oxlintrc.json  AGENTS.md  LICENSE  commitlint.config.ts  eslint.config.ts  feature-design.md  feature.md  feature.zh-CN.md  package.json  pnpm-lock.yaml  prettier.config.ts  stylelint.config.ts  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.build.ts  vite.config.ts  vite.plugin.ts  vitest.config.ts  功能设计文档.md
.husky/: lintstagedrc.ts  pre-commit
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: backup.rs  cleanup.rs  device.rs  export.rs  mod.rs  restore.rs  scan.rs  settings.rs
src-tauri/src/copier/: conflict.rs  mod.rs  parallel.rs  progress.rs
src-tauri/src/database/: compare.rs  migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/deleter/: delete.rs  mod.rs  verify.rs
src-tauri/src/device/: detect.rs  mod.rs
src-tauri/src/hasher/: fast_hash.rs  mod.rs  sha256.rs
src-tauri/src/restorer/: conflict.rs  mod.rs  restore.rs
src-tauri/src/scanner/: filter.rs  mod.rs  progress.rs  walk.rs
src-tauri/src/utils/: format.rs
src/api/: backup.ts  cleanup.ts  device.ts  export.ts  restore.ts  scan.ts  settings.ts
src/components/: DesignCard.vue  DesignLabel.vue  DesignPathInput.vue  DesignRadioGroup.vue  DesignStatCard.vue  DesignSwitcher.vue  DesignToggle.vue  FileFilter.vue  FileTable.vue  PathSelector.vue  ProgressBar.vue  SpeedIndicator.vue  StatsCard.vue  (+1 more)
(+32 files in other folders)
